dealer hand added, background changed.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <h1>BlackJack</h1>
       <h2 id="message-el">Do You Want To play a round?</h2>
+      <p id="dealer-el">Dealer Hand:</p>
       <p id="cards-el">Cards:</p>
       <p id="sum-el">Sum:</p>
       <div>
